fix: basic styles, font weights to make it readable

--- a/src/styles/prism.css
+++ b/src/styles/prism.css
@@ -1,6 +1,5 @@
 :root {
   --pink: rgb(255, 167, 196);
-  --bg: #fff;
   --header: var(--pink);
   --textNormal: #222;
   --textTitle: #222;
